fix: hide overflow on the block component

--- a/src/app/components/block/block.component.css
+++ b/src/app/components/block/block.component.css
@@ -1,3 +1,3 @@
 :host {
-  @apply block bg-white rounded-xl p-1.5;
+  @apply block bg-white rounded-xl p-1.5 overflow-hidden;
 }
